# prime-rl

./: pyproject.toml  schedule_rl_run.sh
bash_scripts/: cli_eval_gemma_gsm8k.sh  cli_eval_mistral_think_gsm8k.sh  cli_eval_olmo_think_gsm8k.sh.sh  cli_eval_qwen_gsm8k.sh  eval_mistral3_gsm8k.sh  eval_olmo3_gsm8k.sh  eval_olmo3_instruct_gsm8k.sh  eval_qwen_0.6B_gsm8k.sh  eval_qwen_8B_gsm8k.sh  qwen3_0.6b_seqlen_10k.sh  qwen3_0.6b_seqlen_2k.sh  qwen3_0.6b_seqlen_4k.sh  qwen3_4b_seqlen_2k.sh  qwen3_4b_seqlen_4k.sh  qwen3_4b_seqlen_8k.sh  qwen3_8b_seqlen_2k.sh
configs/sokoban/: code_calculator.py  infer.toml  orch.toml  train.toml
